<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/main_activity_settings_id"
        android:title="@string/main_activity_settings_title"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        />
    <item
        android:id="@+id/main_activity_help_id"
        android:title="@string/main_activity_help_title"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        />
    <item
        android:id="@+id/main_activity_about_id"
        android:title="@string/main_activity_about_title"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        />

</menu>