<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addEditScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="14"
        android:useDefaultMargins="true"
        >


        <!--
         -->
        <TextView
            android:id="@+id/heading2_symbol_title"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/heading2_symbol_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/symbol_edit_text"
            android:layout_column="1"
            android:layout_row="0"
            android:hint="@string/heading2_symbol_title"
            android:inputType="text"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_opening_price_title"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/heading2_opening_price_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/opening_price_edit_text"
            android:layout_column="1"
            android:layout_row="1"
            android:hint="@string/heading2_opening_price_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_previous_closing_price_title"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/heading2_previous_closing_price_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/previous_closing_price_edit_text"
            android:layout_column="1"
            android:layout_row="2"
            android:hint="@string/heading2_previous_closing_price_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_bid_price_title"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/heading2_bid_price_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/bid_price_edit_text"
            android:layout_column="1"
            android:layout_row="3"
            android:hint="@string/heading2_bid_price_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_bid_size_title"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/heading2_bid_size_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/bid_size_edit_text"
            android:layout_column="1"
            android:layout_row="4"
            android:hint="@string/heading2_bid_size_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_ask_price_title"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/heading2_ask_price_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/ask_price_edit_text"
            android:layout_column="1"
            android:layout_row="5"
            android:hint="@string/heading2_ask_price_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_ask_size_title"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/heading2_ask_size_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/ask_size_edit_text"
            android:layout_column="1"
            android:layout_row="6"
            android:hint="@string/heading2_ask_size_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_price_title"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/heading2_last_trade_price_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/last_trade_price_edit_text"
            android:layout_column="1"
            android:layout_row="7"
            android:hint="@string/heading2_last_trade_price_title"
            android:inputType="numberDecimal"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_quantity_title"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/heading2_last_trade_quantity_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/last_trade_quantity_edit_text"
            android:layout_column="1"
            android:layout_row="8"
            android:inputType="numberDecimal"
            android:hint="@string/heading2_last_trade_quantity_title"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_date_title"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/heading2_last_trade_date_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/last_trade_date_edit_text"
            android:layout_column="1"
            android:layout_row="9"
            android:hint="@string/heading2_last_trade_date_title"
            android:inputType="date"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_time_title"
            android:layout_column="0"
            android:layout_row="10"
            android:text="@string/heading2_last_trade_time_title"
            style="@style/FragmentLabelTextView"
            />

        <EditText
            android:id="@+id/last_trade_time_edit_text"
            android:layout_column="1"
            android:layout_row="10"
            android:hint="@string/heading2_last_trade_time_title"
            android:inputType="time"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_insert_datetime_title"
            android:layout_column="0"
            android:layout_row="11"
            android:text="@string/heading2_insert_datetime_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/insert_datetime_text_view"
            android:layout_column="1"
            android:layout_row="11"
            android:hint="@string/heading2_insert_datetime_title"
            android:inputType="datetime"
            style="@style/FragmentEditText"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_modify_datetime_title"
            android:layout_column="0"
            android:layout_row="12"
            android:text="@string/heading2_modify_datetime_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/modify_datetime_text_view"
            android:layout_column="1"
            android:layout_row="12"
            android:hint="@string/heading2_modify_datetime_title"
            android:inputType="datetime"
            style="@style/FragmentEditText"
            />


        <!--
            Save the data
         -->
        <Button
            android:id="@+id/save_button"
            android:layout_row="13"
            android:text="@string/fragment_update_button_text"
            android:contentDescription="@string/fragment_update_button_content_description">
        </Button>

    </GridLayout>


</ScrollView>